--- a/Index.html
+++ b/Index.html
@@ -1,14 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bon Appetit</title>
+
+    <title>Healthy Food</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    
 </head>
-<body>
-    
+
+<section class="Order-Food flexible-container">
+
+    <body>
+        <div class="half-width">
+            <h1><span class="orange-color">Skip</span>
+
+                <span class="Dark-Grey">The Diet, <br> Just Eat Healthy <br>
+
+                    With Healthy Food<br></span>
+            </h1>
+
+            <p style="color: rgb(97, 95, 95);">Imagine you don't need a diet because we provide
+
+                healthy and delicious food for you!</p><br>
+
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/samia-jahan-3a6a43216/">Order
+                Food</a>
+        </div>
+
+        <div class="half-width">
+            <img src="images/female/Group 8425.png">
+        </div>
+</section>
+
+
+<section class="About-Me">
+    <div class="half-width">
+        <img src="images/female/Person Image.png">
+    </div>
+    <div class="half-width">
+        <h2><span class="Dark-Grey">About Me</span></h2><br>
+        <p style="color: rgb(97, 95, 95);">
+        <h4>I love to cook and my passion is also food.I appeared on
+            Masterchef
+            Australia
+            (2013). The experience encouraged me to follow my passion.I hope you enjoy visiting my website. I love
+            hearing from you, and hearing how healthy food changed your life! I look forward to sharing with you all the
+            benefits of healthy food.</h4>
+        </p>
+        <br><br><br>
+        <a class="link-button" target="_blank" href="https://www.facebook.com/samiajahan.sane/">Contact Me</a>
+
+    </div>
+
+</section>
+
+
+<section class="My-Recipies">
+    <div class="My-Recipies-Headline">
+        <h2><span class="Dark-Grey" id="my-recipies-centered">My Recipies</span></h2>
+
+        <p style="color: rgb(97, 95, 95);">
+        <h4>
+            I’m the recipe developer and also i cook behind Healthy Food.I use my
+            unrelenting enthusiasm for eating everything to propel myself around the world as an award-winning food
+            writer.
+        </h4>
+        </p>
+
+    </div>
+</section>
+
+<section class="My-Recipies-Headline">
+
+    <div class="flexible-container">
+        <div class="Reciepe-item half-width" id="avocado-reciepe-1">
+            <img style="border-radius: 14%;"
+                src="images/food/avocado-toast-with-tomatoes-balsamic-vinegar-basil-768x559.jpg">
+            <h2>Avocado Toast</h2>
+            <p style="color: rgb(97, 95, 95);">
+            <h4>
+                We’re going back to basics this summer, so let’s talk about avocado
+                toast! Creamy avocado spread onto well-toasted bread is one of my favorite quick meals. Actually, it’s
+                one of my favorite meals in general. It’s so delicious, I’d call it one of life’s simplest pleasures.
+            </h4>
+            </p>
+        </div>
+
+
+        <div class="Reciepe-item half-width" id="cake-reciepe-2">
+            <img style="border-radius: 14%;" src="images/food/2nd recipie.jpg">
+            <h2>Blueberry Cake</h2>
+            <p style="color: rgb(97, 95, 95);">
+            <h4>
+                This blueberry cake is my official summertime dessert. I hope it becomes yours, too. It’s tender, fully
+                loaded with blueberries, and simple to make—no mixer required. It’s a dream!
+            </h4>
+            </p>
+        </div>
+
+
+        <div class="Reciepe-item half-width" id="steak-reciepe-2">
+            <img style="border-radius: 14%;" src="images/food/3rd recipie.jpg">
+            <h2>Cauliflower Steak</h2>
+            <p style="color: rgb(97, 95, 95);">
+            <h4>Tired of regular roasted cauliflower? Try cauliflower “steaks” instead! Cauliflower steak makes a strong
+                presentation at the dinner table. Think of it more as a side dish or meal component than a protein-rich
+                steak—after all, we’re talking about roasted slabs of cauliflower.
+            </h4>
+            </p>
+        </div>
+
+    </div>
+</section><br>
+
+<section class="flexible-container-box ">
+    <div class="flexible-container My-Followers">
+        <div class="half-width ">
+            <h2>700K</h2>
+            <p style="color: rgb(97, 95, 95);">
+            <h4>Youtube Subscribers</h4>
+            </p>
+        </div>
+        <div class="half-width">
+            <h2>2.4m</h2>
+            <p style="color: rgb(97, 95, 95);">
+            <h4>Instagram Followers</h4>
+            </p>
+        </div>
+        <div class="half-width ">
+            <h2>100K</h2>
+            <p style="color: rgb(97, 95, 95);">
+            <h4>Dribbble Shot Likes</h4>
+            </p>
+        </div>
+    </div>
+</section><br>
+
+
+<footer>
+
+    <p>
+    <h2><span class="orange-color">Healthy Food</span></h2>
+    </h2>
+    <p style="color:rgba(112, 182, 209, 0.616);">Eat healthy to live healthy. Live healthy to live happy.
+    </p>
+
+</footer>
 </body>
+
 </html>
